--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ development:
   pool: 5
   username: jozool
   password: jozool
-  socket: /tmp/mysql.sock
+#  socket: /tmp/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -29,14 +29,14 @@ test:
   pool: 5
   username: jozool
   password: jozool
-  socket: /tmp/mysql.sock
+ # socket: /tmp/mysql.sock
 
 production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: jozool
+  database: itbackup
   pool: 5
-  username: jozool
-  password: jozool
-  socket: /tmp/mysql.sock
+  username: ngobackup
+  password: ngobackup
+  #socket: /tmp/mysql.sock
